fix bottomnav jumping when hovered

--- a/css/main.css
+++ b/css/main.css
@@ -347,6 +347,8 @@ h1 {
 
 .bottomnav a:hover {
   color: #f2f2f2;
+  background-color: #232323;
+  padding: 12px 16px;
 }
 
 .blog h {
